compile.log
anim.cpp:108:14: error: field 'mvstack' has incomplete type
 MatrixStack  mvstack;
              ^
anim.cpp:116:17: error: expected identifier before numeric constant
 Angel::vec4 eye(0, 0.0, 50.0,1.0);
                 ^
anim.cpp:116:17: error: expected ',' or '...' before numeric constant
anim.cpp:117:17: error: expected identifier before numeric constant
 Angel::vec4 ref(0.0, 0.0, 0.0,1.0);
                 ^
anim.cpp:117:17: error: expected ',' or '...' before numeric constant
anim.cpp:118:16: error: expected identifier before numeric constant
 Angel::vec4 up(0.0,1.0,0.0,0.0);
                ^
anim.cpp:118:16: error: expected ',' or '...' before numeric constant
anim.cpp:509:1: error: expected '}' at end of input
 }
 ^
anim.cpp: In destructor 'MatrixStack::~MatrixStack()':
anim.cpp:96:32: error: a function-definition is not allowed here before '{' token
     void push( const mat4& m ) {
                                ^
anim.cpp:101:23: error: a function-definition is not allowed here before '{' token
     mat4& pop( void ) {
                       ^
anim.cpp: In member function 'void MatrixStack::myKey(unsigned char, int, int)':
anim.cpp:237:13: error: expected ';' before 'break'
             break ;
             ^
anim.cpp: In member function 'void MatrixStack::idleCB()':
anim.cpp:467:12: error: '((MatrixStack*)this)->MatrixStack::eye' does not have class type
         eye.x = 20*sin(TIME);
            ^
anim.cpp:468:12: error: '((MatrixStack*)this)->MatrixStack::eye' does not have class type
         eye.z = 20*cos(TIME);
            ^
anim.cpp: In member function 'int MatrixStack::main(int, char**)':
anim.cpp:497:24: error: cannot convert 'MatrixStack::idleCB' from type 'void (MatrixStack::)()' to type 'void (*)()'
     glutIdleFunc(idleCB) ;
                        ^
anim.cpp:498:31: error: cannot convert 'MatrixStack::myReshape' from type 'void (MatrixStack::)(int, int)' to type 'void (*)(int, int)'
     glutReshapeFunc (myReshape);
                               ^
anim.cpp:499:29: error: cannot convert 'MatrixStack::myKey' from type 'void (MatrixStack::)(unsigned char, int, int)' to type 'void (*)(unsigned char, int, int)'
     glutKeyboardFunc( myKey );
                             ^
anim.cpp:500:28: error: cannot convert 'MatrixStack::myMouseCB' from type 'void (MatrixStack::)(int, int, int, int)' to type 'void (*)(int, int, int, int)'
     glutMouseFunc(myMouseCB) ;
                            ^
anim.cpp:501:30: error: cannot convert 'MatrixStack::myMotionCB' from type 'void (MatrixStack::)(int, int)' to type 'void (*)(int, int)'
     glutMotionFunc(myMotionCB) ;
                              ^
anim.cpp:504:28: error: cannot convert 'MatrixStack::display' from type 'void (MatrixStack::)()' to type 'void (*)()'
     glutDisplayFunc(display);
                            ^
anim.cpp: At global scope:
anim.cpp:509:1: error: expected unqualified-id at end of input
 }
 ^
make: *** [anim.o] Error 1
